@startuml

title __TYPECHECK's Class Diagram__\n

  namespace dev.aguss787.cs4212.assignment2 {
    namespace typecheck {
      class dev.aguss787.cs4212.assignment2.typecheck.ErrorList {
          + addIfNotNull()
          + addIfNotNull()
      }
    }
  }
  

  namespace dev.aguss787.cs4212.assignment2 {
    namespace typecheck {
      class dev.aguss787.cs4212.assignment2.typecheck.FunctionSignature {
          - arguments : ArrayList<Declaration>
          + FunctionSignature()
          + equals()
          + getArguments()
          + getReturns()
          + hashCode()
      }
    }
  }
  

  namespace dev.aguss787.cs4212.assignment2 {
    namespace typecheck {
      class dev.aguss787.cs4212.assignment2.typecheck.LocalEnv {
          + containsKey()
      }
    }
  }
  

  namespace dev.aguss787.cs4212.assignment2 {
    namespace typecheck {
      class dev.aguss787.cs4212.assignment2.typecheck.TypeCheck {
          {static} + check()
          {static} - check()
          {static} - check()
          {static} - check()
          {static} - check()
          {static} - getTypeName()
      }
    }
  }
  

  namespace dev.aguss787.cs4212.assignment2 {
    namespace typecheck {
      class dev.aguss787.cs4212.assignment2.typecheck.TypeDescriptor {
          - props : Map<String, Type>
          + Get()
          + TypeDescriptor()
          + addProp()
      }
    }
  }
  

  namespace dev.aguss787.cs4212.assignment2 {
    namespace typecheck {
      class dev.aguss787.cs4212.assignment2.typecheck.TypeMap {
          + containsKey()
          + putOnce()
      }
    }
  }
  

  namespace dev.aguss787.cs4212.assignment2 {
    namespace typecheck {
      class dev.aguss787.cs4212.assignment2.typecheck.UniqueReducer {
          - duplicate : ArrayList<U>
          - st : Set<U>
          + getDuplicate()
          + reduce()
          + reset()
      }
    }
  }
  

  dev.aguss787.cs4212.assignment2.typecheck.ErrorList -up-|> java.util.ArrayList
  dev.aguss787.cs4212.assignment2.typecheck.FunctionSignature .up.|> dev.aguss787.cs4212.assignment1.ast.Type
  dev.aguss787.cs4212.assignment2.typecheck.FunctionSignature o-- dev.aguss787.cs4212.assignment1.ast.Type : returns
  dev.aguss787.cs4212.assignment2.typecheck.LocalEnv -up-|> java.util.HashMap
  dev.aguss787.cs4212.assignment2.typecheck.TypeMap -up-|> java.util.HashMap


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
